package by.bsuir.excusegenerator.model;

import java.beans.PropertyChangeListener;
import java.beans.PropertyChangeSupport;
import java.util.List;
import java.util.Optional;
import java.util.random.RandomGenerator;

/**
 * Активная модель: хранит введённые данные, формирует оправдание и сообщает
 * подписчикам о каждом изменении состояния.
 */
public final class ExcuseModel {
    public static final String STATE_PROPERTY = "state";

    private final PropertyChangeSupport changeSupport = new PropertyChangeSupport(this);
    private final RandomGenerator random;
    private ExcuseState state = ExcuseState.empty();

    public ExcuseModel() {
        this(RandomGenerator.getDefault());
    }

    ExcuseModel(RandomGenerator random) {
        this.random = random;
    }

    public ExcuseState getState() {
        return state;
    }

    public Optional<ExcuseInput> getLastInput() {
        return Optional.ofNullable(state.input());
    }

    public void saveInput(Situation situation) throws ValidationException {
        if (situation == null) {
            throw new ValidationException("Выберите ситуацию.");
        }
        updateState(new ExcuseState(new ExcuseInput(situation), ""));
    }

    public void generateExcuse() throws ValidationException {
        ExcuseInput input = getLastInput().orElseThrow(() ->
                new ValidationException("Сначала введите данные для оправдания."));

        List<String> templates = templatesFor(input.situation());
        String generated = templates.get(random.nextInt(templates.size()));
        updateState(new ExcuseState(input, generated));
    }

    public void addPropertyChangeListener(PropertyChangeListener listener) {
        changeSupport.addPropertyChangeListener(STATE_PROPERTY, listener);
    }

    public void removePropertyChangeListener(PropertyChangeListener listener) {
        changeSupport.removePropertyChangeListener(STATE_PROPERTY, listener);
    }

    private void updateState(ExcuseState newState) {
        ExcuseState oldState = state;
        state = newState;
        changeSupport.firePropertyChange(STATE_PROPERTY, oldState, newState);
    }

    static List<String> templatesFor(Situation situation) {
        return switch (situation) {
            case STUDY -> List.of(
                    "Не получилось закончить задание вовремя из-за временных проблем с доступом к учебным материалам. Работа уже завершается.",
                    "Во время подготовки обнаружилась ошибка в исходных данных, поэтому потребовалось дополнительное время на проверку и исправление результата.",
                    "Выполнение задания заняло больше времени, чем ожидалось: пришлось повторно проверить расчёты и исправить найденные неточности.",
                    "Файл с готовой работой повредился во время сохранения. Резервная копия уже восстановлена, осталось проверить оформление.",
                    "Из-за перебоев с интернетом не удалось вовремя отправить выполненное задание. Соединение восстановлено, поэтому работа будет отправлена в ближайшее время.",
                    "После повторного изучения требований выяснилось, что часть задания была оформлена неверно. Сейчас работа приводится к нужному формату.",
                    "Обновление программного обеспечения нарушило работу настроенного проекта. Среда уже восстановлена, выполнение задания продолжается.",
                    "Для завершения задания понадобились дополнительные материалы, доступ к которым появился позже ожидаемого. Основная часть уже выполнена.",
                    "Перед сдачей обнаружилось расхождение между результатом и условием задания. Потребовалось время, чтобы найти и исправить причину.",
                    "Из-за ухудшения самочувствия темп работы пришлось временно снизить. Сейчас выполнение задания продолжается в обычном режиме."
            );
            case WORK -> List.of(
                    "Выполнение задачи задержалось из-за внепланового сбоя рабочего окружения. Проблема уже устранена, работа продолжается.",
                    "Для корректного завершения задачи потребовалось уточнить исходные данные. Проверка заняла больше времени, чем планировалось.",
                    "Возникла временная техническая проблема с доступом к рабочим материалам. Доступ восстановлен, поэтому задержка будет минимальной.",
                    "Зависимый сервис оказался временно недоступен, поэтому завершить задачу в установленный срок не получилось. Сейчас сервис снова работает.",
                    "Появилась срочная задача с более высоким приоритетом, из-за чего текущую работу пришлось ненадолго отложить. Выполнение уже возобновлено.",
                    "Финальная проверка выявила несоответствие в результатах. Потребовалось дополнительное время, чтобы исправить проблему до передачи работы.",
                    "После обновления рабочего компьютера часть настроек пришлось восстановить вручную. Сейчас рабочее окружение снова готово.",
                    "Необходимое согласование заняло больше времени, чем ожидалось. После получения ответа задача сразу была продолжена.",
                    "Требования к результату изменились уже в процессе выполнения. Понадобилось время, чтобы учесть новые условия.",
                    "Из-за ошибки синхронизации использовалась устаревшая версия рабочих материалов. Актуальные данные уже получены, результат исправляется."
            );
            case LATE -> List.of(
                    "По пути возникла непредвиденная задержка транспорта. Маршрут уже скорректирован, поэтому опоздание будет небольшим.",
                    "Движение неожиданно остановилось из-за перекрытия дороги. Сейчас выбран объездной маршрут, скоро получится добраться до места.",
                    "Перед выходом пришлось устранить срочную бытовую проблему. Она уже решена, но из-за этого возникла небольшая задержка.",
                    "Общественный транспорт пришёл значительно позже расписания. Поездка уже продолжается, поэтому задержка скоро закончится.",
                    "Обычный маршрут неожиданно изменили, и пришлось искать другую пересадку. Новый маршрут уже найден.",
                    "На дороге образовалась пробка из-за небольшого происшествия. Движение постепенно восстанавливается.",
                    "Заказанная машина была отменена в последний момент. Другой транспорт уже найден, но это заняло дополнительное время.",
                    "Погодные условия заметно замедлили движение. Путь продолжается с соблюдением необходимых мер безопасности.",
                    "Из-за технической неисправности транспорт остановился между остановками. Сейчас поездка продолжается другим маршрутом.",
                    "Перед выходом обнаружилась проблема с дверным замком. Её удалось быстро решить, но небольшого опоздания избежать не получилось."
            );
            case FORGETFULNESS -> List.of(
                    "Из-за утренней спешки нужная вещь осталась дома. Вопрос уже решается, и её получится передать при первой возможности.",
                    "Нужный материал случайно оказался не в той папке. Он уже найден и будет передан в ближайшее время.",
                    "После обновления телефона не сработало установленное напоминание. Оно уже восстановлено, поэтому ситуация не должна повториться.",
                    "Изменение расписания не сохранилось в календаре, поэтому нужное событие осталось без уведомления. Календарь уже обновлён.",
                    "Запись была случайно сделана не на ту дату. Ошибка уже обнаружена, а информация перенесена в основной календарь.",
                    "Уведомления оказались отключены после смены режима телефона. Настройки уже исправлены.",
                    "Подготовленные документы остались рядом с сумкой и не были взяты в последний момент. Они уже найдены.",
                    "Срок выполнения был перепутан с датой соседней задачи. Расписание проверено, чтобы такая ошибка не повторилась.",
                    "Из-за сбоя синхронизации заметка не появилась на основном устройстве. Данные уже восстановлены из резервной копии.",
                    "Срочное дело отвлекло внимание, поэтому запланированное действие временно выпало из памяти. Сейчас оно снова добавлено в список задач."
            );
        };
    }
}
